fix: changed most px to rem for readability and consistent structure

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -182,7 +182,7 @@ section div {
 #signup-form {
     color: #ffffff;
     background-color: rgba(60, 60, 60, 0.6);
-    padding: 30px;
+    padding: 2rem;
 }
 
 
@@ -196,7 +196,7 @@ section div {
     background: transparent;
     color: #fafafa;
     width: 100%;
-    height: 25px;
+    height: 1.5rem;
     margin: 5px 0 20px 0;
     border: 1px solid #fafafa;
     border-radius: 2px;
@@ -212,9 +212,9 @@ section div {
 
 
 .join-button {
-    margin-top: 20px;
+    margin-top: 1rem;
     border-radius: 2px;
-    padding: 15px 32px;
+    padding: 1rem 2rem;
     font-size: 100%;
     background-color: #3a3a3a;
     color: #fafafa;
@@ -229,14 +229,14 @@ section div {
 #what-next {
     color: #fafafa;
     font-size: 140%;
-    padding-bottom: 20px;
+    padding-bottom: 1rem;
 }
 
 #what-next h2 {
     color: #ffffff;
     background-color: #3a3a3a;
-    padding-left: 8px;
-    margin-bottom: 16px;
+    padding-left: 0.5rem;
+    margin-bottom: 1rem;
 }
 
 #contact-you {
@@ -247,11 +247,11 @@ section div {
 #personal-trainer {
     width: 100%;
     margin: auto;
-    padding: 32px 0;
+    padding: 2rem 0;
 }
 
 #personal-trainer h2 {
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     text-align: center;
     font-size: 200%;
     margin-top: 10px;
@@ -315,13 +315,13 @@ section div {
 #address {
     text-align: center;
     font-size: 120%;
-    margin-top: 16px;
+    margin-top: 1rem;
 }
 
 #opening-hours {
     text-align: center;
     font-size: 120%;
-    margin-top: 15px;
+    margin-top: 1rem;
     margin-left: 10px;
     margin-bottom: 10px;
 }
@@ -329,7 +329,7 @@ section div {
 #contact {
     text-align: center;
     font-size: 120%;
-    margin-top: 15px;
+    margin-top: 1rem;
 }
 
 #social-networks {
@@ -400,7 +400,7 @@ section div {
     }
 
     #address {
-        margin-top: 15px;
+        margin-top: 1rem;
     }
 
     .about-us {
@@ -508,7 +508,7 @@ section div {
 
     #address {
         font-size: 150%;
-        margin-top: 15px;
+        margin-top: 1rem;
     }
 
     #opening-hours {
